--- a/Main/Application/templates/Application/live.html
+++ b/Main/Application/templates/Application/live.html
@@ -101,11 +101,12 @@
 
     <section id="section-why" class="container-fluid">
         <h1 class="why-heading">WHY LIVE CLASSES?</h1>
+        <img class="why-img1" src="{% static 'images/ellipses.png' %}" alt=""> 
         <div class="why">
             <img class="why__img" src="{% static 'images/internet.png' %}" alt="">
             <div class="why__content">
                 <div class="why__content--box">
-                    <img class="why__content--box-img" src="{% static 'images/clock.png' %}" alt="">
+                <img class="why__content--box-img" src="{% static 'images/clock.png' %}" alt="">
                     <h3 class="why__content--box-title">Instant Doubt Clarification</h3>
                     <p class="why__content--box-para">No Waiting for doubts to be clarified.</p>
                 </div>
@@ -125,6 +126,7 @@
     </section>
 
     <section id="section-get" class="container-fluid">
+        <img class="get-img1" src="{% static 'images/ellipses.png' %}" alt=""> 
         <h1 class="get-heading">Join Coursify. <span>TO GET it all!!</span></h1>
         <div class="get">
             <img class="get__img" src="{% static 'images/tutorials.png' %}" alt="">
@@ -170,24 +172,29 @@
     <section id="section-meet" class="container-fluid">
         <h1 class="meet-heading">Meet your Teachers</h1>
         <div class="meet">
+            <img class="state-img3" src="{% static 'images/ellipses.png' %}" alt="">
             <div class="meet__content">
+                <img class="meet-img1" src="{% static 'images/circlepink.png' %}" alt=""> 
                 <img class="meet__content--img" src="{% static 'images/group.jpg' %}">
                 <h3 class="meet__content--title">Teacher Name</h3>
                 <h4 class="meet__content--sub">Details</h4>
             </div>
             <div class="meet__content">
+                <img class="meet-img2" src="{% static 'images/circleorange.png' %}" alt=""> 
                 <img class="meet__content--img" src="{% static 'images/group.jpg' %}">
                 <h3 class="meet__content--title">Teacher Name</h3>
                 <h4 class="meet__content--sub">Details</h4>
             </div>
         </div>
         <div class="meet">
-            <div class="meet__content" style="justify-self: center;">
+                <div class="meet__content" style="justify-self: center;">
+                <img class="meet-img3" src="{% static 'images/circlegreen.png' %}" alt=""> 
                 <img class="meet__content--img" style="height: 18rem;width:18rem;" src="{% static 'images/group.jpg' %}">
                 <h3 class="meet__content--title">Teacher Name</h3>
                 <h4 class="meet__content--sub">Details</h4>
             </div>
             <div class="meet__content" style="justify-self: center;">
+                <img class="meet-img4" src="{% static 'images/circlepink.png' %}" alt=""> 
                 <img class="meet__content--img" src="{% static 'images/group.jpg' %}">
                 <h3 class="meet__content--title">Teacher Name</h3>
                 <h4 class="meet__content--sub">Details</h4>
