--- a/Main/Application/templates/Application/live.html
+++ b/Main/Application/templates/Application/live.html
@@ -21,80 +21,21 @@
     <section id="section-price" class="container-fluid">
         <h1 class="price-heading">Achieve your GOALS With Us.</h1>
         <h1 class="price-subheading">Starting at just <span>&#x20B9;</span> 1000 per month</h1>
-        <h1 class="price-premium">PREMIUM</h1>
+        <img class="price-bg" src="{% static 'images/bglarge1.png' %}">
+        <h1 class="price-premium"><img class="price-premium--img" src="{% static 'images/Crown.png' %}" alt=""> Premium</h1>
         <div class="price">
             <div class="price__content">
-                <div class="price__content--box">
-                    <h2 class="price__content--box-heading">Classes 6-8</h2>
-                    <ul class="price__content--box-list">
-                        <li class="price__content--box-list-item"> <span>&bull;</span> All the Classes</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Tutor Interaction - Thrice Per Week</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Parent Interaction - Twice Per Two Weeks</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Unlimited Content and Free Courses</li>
-                    </ul>
-                    <h2 class="price__content--box-rate"><span>&#x20B9;</span> 1000/- <span class="per">Per month</span></h2>
-                    <button class="price__content--box-btn">Subscribe Now</button>
-                </div>
-                <div class="price__content--box">
-                    <h2 class="price__content--box-heading">Classes 9-10</h2>
-                    <ul class="price__content--box-list">
-                        <li class="price__content--box-list-item"> <span>&bull;</span> All the Classes</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Tutor Interaction - Thrice Per Week</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Parent Interaction - Twice Per Two Weeks</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Unlimited Content and Free Courses</li>
-                    </ul>
-                    <h2 class="price__content--box-rate"><span>&#x20B9;</span> 1000/- <span class="per">Per month</span></h2>
-                    <button class="price__content--box-btn">Subscribe Now</button>
-                </div>
-                <div class="price__content--box">
-                    <h2 class="price__content--box-heading">Classes 11-12</h2>
-                    <ul class="price__content--box-list">
-                        <li class="price__content--box-list-item"> <span>&bull;</span> All the Classes</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Tutor Interaction - Thrice Per Week</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Parent Interaction - Twice Per Two Weeks</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Unlimited Content and Free Courses</li>
-                    </ul>
-                    <h2 class="price__content--box-rate"><span>&#x20B9;</span> 1000/- <span class="per">Per month</span></h2>
-                    <button class="price__content--box-btn">Subscribe Now</button>
-                </div>
+                <img class="price__content--img" src="{% static 'images/card4.png' %}" alt="">
+                <img class="price__content--img" src="{% static 'images/card5.png' %}" alt="">
+                <img class="price__content--img" src="{% static 'images/card6.png' %}" alt="">
             </div>
         </div>
-        <h1 class="price-basic">BASIC</h1>
+        <h1 class="price-basic">Basic</h1>
         <div class="price">
             <div class="price__content">
-                <div class="price__content--box">
-                    <h2 class="price__content--box-heading" style="background-color:#F5908D;">Classes 6-8</h2>
-                    <ul class="price__content--box-list">
-                        <li class="price__content--box-list-item"> <span>&bull;</span> All the Classes</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Tutor Interaction - Thrice Per Week</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Parent Interaction - Twice Per Two Weeks</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Unlimited Content and Free Courses</li>
-                    </ul>
-                    <h2 class="price__content--box-rate" style="color: #F5908D;"><span>&#x20B9;</span> 1000/- <span class="per">Per month</span></h2>
-                    <button class="price__content--box-btn" style="background-color:#D60B3C;color:white;">Subscribe Now</button>
-                </div>
-                <div class="price__content--box">
-                    <h2 class="price__content--box-heading" style="background-color:#F5908D;">Classes 9-10</h2>
-                    <ul class="price__content--box-list">
-                        <li class="price__content--box-list-item"> <span>&bull;</span> All the Classes</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Tutor Interaction - Thrice Per Week</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Parent Interaction - Twice Per Two Weeks</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Unlimited Content and Free Courses</li>
-                    </ul>
-                    <h2 class="price__content--box-rate" style="color:#F5908D;"><span>&#x20B9;</span> 1000/- <span class="per">Per month</span></h2>
-                    <button class="price__content--box-btn" style="background-color:#D60B3C;color:white;">Subscribe Now</button>
-                </div>
-                <div class="price__content--box">
-                    <h2 class="price__content--box-heading" style="background-color:#F5908D;">Classes 11-12</h2>
-                    <ul class="price__content--box-list">
-                        <li class="price__content--box-list-item"> <span>&bull;</span> All the Classes</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Tutor Interaction - Thrice Per Week</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Parent Interaction - Twice Per Two Weeks</li>
-                        <li class="price__content--box-list-item"> <span>&bull;</span> Unlimited Content and Free Courses</li>
-                    </ul>
-                    <h2 class="price__content--box-rate" style="color:#F5908D;"><span>&#x20B9;</span> 1000/- <span class="per">Per month</span></h2>
-                    <button class="price__content--box-btn" style="background-color:#D60B3C;color:white;">Subscribe Now</button>
-                </div>
+                <img class="price__content--img" src="{% static 'images/card1.png' %}" alt="">
+                <img class="price__content--img" src="{% static 'images/card2.png' %}" alt="">
+                <img class="price__content--img" src="{% static 'images/card3.png' %}" alt="">
             </div>
         </div>
     </section>
@@ -136,7 +77,6 @@
                 <h3 class="get__content--text"><span>>></span> Peer to Peer Learning</h3>
                 <h3 class="get__content--text"><span>>></span> Check your performance with Graded Tests</h3>
                 <h3 class="get__content--text"><span>>></span> Parent interaction for Better Understanding</h3>
-
             </div>
         </div>
     </section>
@@ -200,6 +140,7 @@
                 <h4 class="meet__content--sub">Details</h4>
             </div>
         </div>
+        <img class="meet-img5" src="{% static 'images/ellipses.png' %}" alt="">
     </section>
 
     <section id="section-say" class="container-fluid">
