--- a/Main/Application/templates/Application/ncert.html
+++ b/Main/Application/templates/Application/ncert.html
@@ -2,5 +2,91 @@
 {% load static %}
 
 {% block content %}
-    
+    <section id="section-poly" class="container-fluid">
+        <h1 class="poly-heading"><span>Class 9th > Maths ></span>  NCERT</h1>
+        <div class="poly">
+            <div class="poly__names">
+                <button class="poly__names--btn">Ch 1: Polynomials</button>
+                <button class="poly__names--btn">Ch 1: Polynomials</button>
+                <button class="poly__names--btn">Ch 1: Polynomials</button>
+                <button class="poly__names--btn">Ch 1: Polynomials</button>
+                <button class="poly__names--btn">Ch 1: Polynomials</button>
+                <button class="poly__names--btn">Ch 1: Polynomials</button>
+                <button class="poly__names--btn">Ch 1: Polynomials</button>
+                <button class="poly__names--btn">Ch 1: Polynomials</button>
+                <button class="poly__names--btn">Ch 1: Polynomials</button>
+                <button class="poly__names--btn">Ch 1: Polynomials</button>
+            </div>
+            <div class="poly__content">
+                <h3 class="poly__content--heading">Chapter 1</h3>
+                <h2 class="poly__content--sub">Polynomials</h2>
+                <div class="poly__content--box">
+                    <div class="chips" style="background-color: #4BAEA0;" >
+                        <img class="chips__img" src="{% static 'images/pradeep.png' %}" alt="">
+                        <h3 class="chips__text">EX 1.1</h3>
+                    </div>
+                    <div class="chips" style="background-color: #F1D4D4;" >
+                        <img class="chips__img" src="{% static 'images/arora.png' %}" alt="">
+                        <h3 class="chips__text">EX 1.1</h3>
+                    </div>
+                    <div class="chips" style="background-color: #FFE9D6;">
+                        <img class="chips__img"  src="{% static 'images/sinha.png' %}" alt="">
+                        <h3 class="chips__text">EX 1.1</h3>
+                    </div>
+                    <div class="chips" style="background-color: #4BAEA0;" >
+                        <img class="chips__img" src="{% static 'images/pradeep.png' %}" alt="">
+                        <h3 class="chips__text">EX 1.1</h3>
+                    </div>
+                    <div class="chips" style="background-color: #F1D4D4;" >
+                        <img class="chips__img" src="{% static 'images/arora.png' %}" alt="">
+                        <h3 class="chips__text">EX 1.1</h3>
+                    </div>
+                    <div class="chips" style="background-color: #FFE9D6;" >
+                        <img class="chips__img" src="{% static 'images/sinha.png' %}" alt="">
+                        <h3 class="chips__text">EX 1.1</h3>
+                    </div>
+                </div>
+                <div class="poly__content--box">
+                    <div class="chips" style="background-color: #E9EFFF;">
+                        <img class="chips__img"  src="{% static 'images/ncert.png' %}" alt="">
+                        <h3 class="chips__text">EX 1.1</h3>
+                    </div>
+                    <div class="chips" style="background-color: #F1D4D4;" >
+                        <img class="chips__img" src="{% static 'images/arora.png' %}" alt="">
+                        <h3 class="chips__text">EX 1.1</h3>
+                    </div>
+                    <div class="chips" style="background-color: #FFE9D6;" >
+                        <img class="chips__img" src="{% static 'images/sinha.png' %}" alt="">
+                        <h3 class="chips__text">EX 1.1</h3>
+                    </div>
+                    <div class="chips" style="background-color: #E9EFFF;">
+                        <img class="chips__img"  src="{% static 'images/ncert.png' %}" alt="">
+                        <h3 class="chips__text">EX 1.1</h3>
+                    </div>
+                    <div class="chips" style="background-color: #F1D4D4;" >
+                        <img class="chips__img" src="{% static 'images/arora.png' %}" alt="">
+                        <h3 class="chips__text">EX 1.1</h3>
+                    </div>
+                    <div class="chips" style="background-color: #FFE9D6;" >
+                        <img class="chips__img" src="{% static 'images/sinha.png' %}" alt="">
+                        <h3 class="chips__text">EX 1.1</h3>
+                    </div>
+                </div>
+                <div class="poly__content--box">
+                    <div class="chips" style="background-color: #E9EFFF;">
+                        <img class="chips__img"  src="{% static 'images/ncert.png' %}" alt="">
+                        <h3 class="chips__text">EX 1.1</h3>
+                    </div>
+                    <div class="chips" style="background-color: #F1D4D4;" >
+                        <img class="chips__img" src="{% static 'images/arora.png' %}" alt="">
+                        <h3 class="chips__text">EX 1.1</h3>
+                    </div>
+                    <div class="chips" style="background-color: #FFE9D6;" >
+                        <img class="chips__img" src="{% static 'images/sinha.png' %}" alt="">
+                        <h3 class="chips__text">EX 1.1</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock content %}
