--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -371,6 +371,87 @@ body {
           .chapter__content .chips__box--item:hover {
             transform: translateY(-1rem) scale(1.1); }
 
+.poly-heading {
+  font-size: 3rem;
+  font-family: 'Poppins',sans-serif;
+  font-weight: 700;
+  margin-left: 7rem;
+  color: #1E4190; }
+  .poly-heading span {
+    color: #D60B3C; }
+
+.poly {
+  height: 100%;
+  margin-bottom: 3rem;
+  display: grid;
+  grid-template-columns: 17% 83%;
+  column-gap: 6rem; }
+  .poly__names {
+    display: grid;
+    grid-template-rows: repeat(10, 4.5rem); }
+    .poly__names--btn {
+      transform: translateY(5rem);
+      background-color: transparent;
+      border-left: none;
+      border-right: none;
+      color: #1E4190;
+      font-size: 1.5rem;
+      font-family: 'Roboto',sans-serif;
+      font-weight: 500;
+      border-right: 0.1rem solid #bbb9b9;
+      border-top-right-radius: 1rem;
+      background-color: white; }
+      .poly__names--btn:not(:first-child) {
+        border-top: none;
+        box-shadow: 0rem -0.2rem 1.5rem rgba(0, 0, 0, 0.1);
+        border-bottom: 0.1rem solid #bbb9b9; }
+      .poly__names--btn:first-child {
+        border-top: 0.1rem solid #bbb9b9;
+        border-bottom: 0.1rem solid #bbb9b9; }
+      .poly__names--btn:hover, .poly__names--btn:focus {
+        background-color: #DE0B38;
+        color: white;
+        outline: none; }
+  .poly__content--heading {
+    font-size: 2rem;
+    margin-top: 5rem;
+    color: #4B4B4B;
+    font-family: 'Poppins',sans-serif;
+    font-weight: 700; }
+  .poly__content--sub {
+    font-size: 3rem;
+    color: rgba(75, 75, 75, 0.6);
+    font-family: 'Poppins',sans-serif;
+    font-weight: 700; }
+  .poly__content--box {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(auto-fit, min-content);
+    width: 90%;
+    column-gap: 2rem; }
+    .poly__content--box .chips {
+      margin-top: 3rem;
+      width: fit-content;
+      box-shadow: 0rem 0rem 1rem rgba(0, 0, 0, 0.4);
+      border-radius: 1rem;
+      position: relative; }
+      .poly__content--box .chips__img {
+        margin-top: 1rem;
+        margin-bottom: .3rem;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 8rem;
+        height: 6rem; }
+      .poly__content--box .chips__text {
+        text-align: center;
+        background-color: white;
+        width: 100%;
+        transform: translateY(1rem);
+        padding: .5rem 6rem;
+        border-bottom-left-radius: 1rem;
+        border-bottom-right-radius: 1rem; }
+
 .clear-heading {
   text-align: center;
   font-size: 3rem;
@@ -915,116 +996,6 @@ body {
   word-spacing: 1rem; }
   .exercise-heading span {
     color: #1E4190; }
-
-.exercise {
-  background-color: transparent;
-  position: relative;
-  margin-top: 6rem;
-  height: 21rem;
-  width: 85%;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-bottom: 5rem; }
-  .exercise__content {
-    display: grid;
-    height: 100%;
-    background-color: transparent;
-    justify-items: center;
-    grid-template-columns: 10% 80% 10%;
-    justify-items: center;
-    align-items: center; }
-    .exercise__content--back {
-      background-color: transparent;
-      border: none;
-      width: fit-content;
-      font-size: 8rem;
-      font-family: 'Poppins',sans-serif;
-      font-weight: 700;
-      color: #1E4190;
-      height: fit-content;
-      transition: all .3s; }
-      .exercise__content--back:hover {
-        transform: scaleX(1.3); }
-      .exercise__content--back:focus, .exercise__content--back:active {
-        outline: none; }
-    .exercise__content--next {
-      background-color: transparent;
-      border: none;
-      width: fit-content;
-      font-size: 8rem;
-      font-family: 'Poppins',sans-serif;
-      font-weight: 700;
-      color: #1E4190;
-      height: fit-content;
-      transition: all .3s; }
-      .exercise__content--next:hover {
-        transform: scaleX(1.3); }
-      .exercise__content--next:focus, .exercise__content--next:active {
-        outline: none; }
-    .exercise__content .chips {
-      width: 85%;
-      height: 100%;
-      display: grid;
-      column-gap: 4rem;
-      background-color: transparent;
-      justify-items: center; }
-      .exercise__content .chips__box {
-        display: grid;
-        grid-template-columns: repeat(100, 22rem);
-        width: 100%;
-        height: 100%;
-        margin-bottom: 3rem;
-        overflow-x: scroll;
-        overflow-y: hidden;
-        column-gap: 7.1rem; }
-        .exercise__content .chips__box--green {
-          background: #4BAEA0; }
-        .exercise__content .chips__box--item {
-          box-shadow: 0rem 0rem 1rem rgba(0, 0, 0, 0.1);
-          border-bottom-left-radius: 1rem;
-          border-bottom-right-radius: 1rem;
-          transition: all .5s;
-          display: grid;
-          grid-template-rows: 60% repeat(2, 20%);
-          align-items: center;
-          justify-items: center;
-          height: 100%;
-          width: 90%;
-          position: relative; }
-          .exercise__content .chips__box--item-img {
-            position: relative;
-            z-index: 0;
-            width: 40%;
-            height: 6rem; }
-          .exercise__content .chips__box--item-title {
-            background: #D60B3C;
-            width: 100%;
-            background: white;
-            text-align: center;
-            font-family: 'Roboto',sans-serif;
-            font-size: 2.5rem;
-            position: relative;
-            height: 100%;
-            bottom: -.4rem;
-            display: grid;
-            align-items: center;
-            color: #4B4B4B; }
-          .exercise__content .chips__box--item-subtitle {
-            background: #D60B3C;
-            width: 100%;
-            color: white;
-            text-align: center;
-            font-size: 1.5rem;
-            height: 100%;
-            bottom: -.4rem;
-            position: relative;
-            border-bottom-left-radius: 1rem;
-            border-bottom-right-radius: 1rem;
-            display: grid;
-            align-items: center; }
-      .exercise__content .chips ::-webkit-scrollbar {
-        background: transparent;
-        display: none; }
 
 .expert-heading {
   text-align: center;
@@ -4085,6 +4056,11 @@ nav {
   width: 85%;
   position: relative; }
 
+#section-poly {
+  margin-top: 7rem;
+  position: relative;
+  height: fit-content; }
+
 #section-chapter {
   height: fit-content;
   margin-top: 6rem;
@@ -4092,20 +4068,20 @@ nav {
 
 #section-exercise {
   height: fit-content;
-  margin-top: 12rem; }
+  margin-top: 6rem; }
 
 #section-maths {
   height: fit-content;
-  margin-top: 12rem;
+  margin-top: 6rem;
   position: relative; }
 
 #section-science {
   height: fit-content;
-  margin-top: 12rem; }
+  margin-top: 6rem; }
 
 #section-course {
   height: fit-content;
-  margin-top: 12rem;
+  margin-top: 6rem;
   position: relative; }
 
 #section-question {
