--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -121,6 +121,88 @@ body {
       font-size: 2rem;
       width: 250%; }
 
+.chap-heading {
+  font-size: 3.5rem;
+  font-family: 'Poppins',sans-serif;
+  font-weight: 700;
+  margin-left: 7rem;
+  color: #1E4190;
+  margin-left: 14.5%; }
+  .chap-heading span {
+    color: #D60B3C; }
+
+.chap {
+  height: 80%;
+  margin-bottom: 3rem;
+  display: grid;
+  column-gap: 6rem;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%); }
+  .chap__content {
+    width: 80%;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%); }
+    .chap__content--heading {
+      font-size: 2rem;
+      margin-top: 5rem;
+      color: #4B4B4B;
+      font-family: 'Poppins',sans-serif;
+      font-weight: 700;
+      margin-left: 5.5%; }
+    .chap__content--sub {
+      font-size: 3rem;
+      color: rgba(75, 75, 75, 0.6);
+      font-family: 'Poppins',sans-serif;
+      font-weight: 700;
+      margin-left: 5.5%; }
+    .chap__content--view {
+      position: absolute;
+      top: -4rem;
+      right: 2.6rem;
+      border: none;
+      padding: .5rem 1.2rem;
+      font-size: 1rem;
+      color: white;
+      background-color: #D60B3C;
+      font-family: 'Poppins',sans-serif;
+      font-weight: 600;
+      border-radius: 20rem; }
+      .chap__content--view:focus, .chap__content--view:active {
+        outline: none; }
+    .chap__content--box {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: repeat(auto-fit, min-content);
+      width: 90%;
+      column-gap: 2rem;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%); }
+      .chap__content--box .chips {
+        margin-top: .5rem;
+        width: fit-content;
+        box-shadow: 0rem 0rem 1rem rgba(0, 0, 0, 0.4);
+        border-radius: 1rem;
+        position: relative; }
+        .chap__content--box .chips__img {
+          margin-top: 1rem;
+          margin-bottom: .3rem;
+          position: relative;
+          left: 50%;
+          transform: translateX(-50%);
+          width: 8rem;
+          height: 6rem; }
+        .chap__content--box .chips__text {
+          text-align: center;
+          background-color: white;
+          width: 100%;
+          transform: translateY(1rem);
+          padding: .5rem 6rem;
+          border-bottom-left-radius: 1rem;
+          border-bottom-right-radius: 1rem; }
+
 .chapter-img1 {
   position: absolute;
   left: -70rem;
@@ -841,56 +923,6 @@ body {
   word-spacing: 1rem; }
   .exercise-heading span {
     color: #1E4190; }
-
-.exercise__content {
-  margin-top: 4rem;
-  display: grid;
-  width: 80%;
-  justify-items: center;
-  grid-template-columns: 5% 90% 5%;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%); }
-  .exercise__content--btn {
-    font-size: 6rem;
-    font-family: 'Roboto',sans-serif;
-    font-weight: 900;
-    color: #4B4B4B;
-    align-self: center; }
-  .exercise__content--box {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 5rem; }
-    .exercise__content--box-item {
-      border-radius: 1rem;
-      background-color: #4BAEA0;
-      padding: 3rem 4rem;
-      position: relative; }
-      .exercise__content--box-item-img {
-        width: 12rem;
-        margin-bottom: 1rem; }
-      .exercise__content--box-item-btn {
-        position: absolute;
-        bottom: -1rem;
-        font-size: 1.4rem;
-        font-family: 'Poppins',sans-serif;
-        font-weight: 400;
-        background-color: #D60B3C;
-        border: none;
-        padding: .5rem 3.2rem;
-        border-radius: .5rem;
-        left: 50%;
-        transform: translateX(-50%);
-        color: white; }
-      .exercise__content--box-item-text {
-        font-size: 1.3rem;
-        color: #1E4190;
-        font-family: 'Poppins',sans-serif;
-        font-weight: 500;
-        position: absolute;
-        bottom: -4rem;
-        left: 50%;
-        transform: translateX(-50%); }
 
 .expert-heading {
   text-align: center;
@@ -3974,6 +4006,11 @@ nav {
   height: fit-content;
   margin-top: 6rem;
   position: relative; }
+
+#section-chap {
+  margin-top: 5rem;
+  position: relative;
+  height: fit-content; }
 
 #section-join {
   height: fit-content;
